--- a/.github/workflows/ecs_deploy.yaml
+++ b/.github/workflows/ecs_deploy.yaml
@@ -8,12 +8,6 @@ on:
         required: true
         default: prod
         type: string
-      secrets:
-        AWS_ROLE_TO_ASSUME:
-          required: true
-        SLACK_WEBHOOK_URL:
-          required: true
-
 jobs:
   ecs_deploy:
     runs-on: ubuntu-latest
@@ -21,11 +15,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1-node16
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: ap-northeast-1
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           role-session-name: GitHubActions-${{ github.run_id }}
+      - name: Check S3 bucket list with the AWS CLI
+        run: |
+          aws s3 ls
       - name: Slack Notify
         if: ${{ always() }}
         uses: 8398a7/action-slack@v3
