--- a/.github/workflows/ecs_deploy.yaml
+++ b/.github/workflows/ecs_deploy.yaml
@@ -23,7 +23,8 @@ jobs:
           aws-region: ap-northeast-1
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           role-session-name: GitHubActions-${{ github.run_id }}
-          inline-session-policy: '{"Version":"2012-10-17","Statement":[{"Sid":"Stmt1","Effect":"Allow","Action":"s3:ListBuckets","Resource":"*"}]}'
+          managed-session-policies: |
+            arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
       - name: Check S3 bucket list with the AWS CLI
         run: |
           aws s3 ls
