--- a/.github/workflows/ec2_deploy.yaml
+++ b/.github/workflows/ec2_deploy.yaml
@@ -42,13 +42,28 @@ jobs:
           echo "etag=$ETAG" >> $GITHUB_OUTPUT
 
       - name: Create deployment with AWS CodeDeploy
+        id: create-deployment
         run: |
-          aws deploy create-deployment \
-          --application-name ${{ secrets.AWS_DEPLOY_APP_NAME }} \
-          --deployment-group-name ${{ secrets.AWS_DEPLOY_GROUP_NAME }} \
-          --deployment-config-name CodeDeployDefault.OneAtATime \
-          --s3-location bucket=${{ secrets.AWS_DEPLOY_SOURCE_BUCKET_NAME }},bundleType=zip,key=${{ github.run_id }}.zip,eTag=${{ steps.s3-deploy.outputs.etag }}
+          DEPLOYMENT_ID=$(aws deploy create-deployment \
+            --application-name ${{ secrets.AWS_DEPLOY_APP_NAME }} \
+            --deployment-group-name ${{ secrets.AWS_DEPLOY_GROUP_NAME }} \
+            --deployment-config-name CodeDeployDefault.OneAtATime \
+            --s3-location bucket=${{ secrets.AWS_DEPLOY_SOURCE_BUCKET_NAME }},bundleType=zip,key=${{ github.run_id }}.zip,eTag=${{ steps.s3-deploy.outputs.etag }} \
+            --query 'deploymentId' --output text)
+          echo "deployment_id=$DEPLOYMENT_ID" >> $GITHUB_OUTPUT
+      
+      - name: Wait for deployment to complete
+        id: wait-for-deployment
+        run: |
+          aws deploy wait deployment-successful --deployment-id ${{ steps.create-deployment.outputs.deployment_id }}
+        continue-on-error: true
 
+      - name: Check deployment status
+        if: ${{ failure() }}
+        run: |
+          echo "Deployment failed. Check AWS CodeDeploy for details."
+          exit 1
+      
       - name: Slack Notify
         if: ${{ always() }}
         uses: 8398a7/action-slack@v3
