--- a/src/laravel/appspec.yml
+++ b/src/laravel/appspec.yml
@@ -5,7 +5,7 @@ files:
     destination: /var/www/laravel
 hooks:
   BeforeInstall:
-    - location: scripts/before_install.sh
+    - location: scripts/before.sh
       timeout: 300
       runas: root
   AfterInstall:
