--- a/.github/workflows/ec2_deploy.yaml
+++ b/.github/workflows/ec2_deploy.yaml
@@ -77,7 +77,7 @@ jobs:
           # 失敗理由をステップのアウトプットとして設定
           DEPLOYMENT_TARGET_DETAILS=$(aws deploy get-deployment-target \
             --deployment-id ${{ steps.create-deployment.outputs.deployment_id }} \
-            --target-id ${{ env.FAILED_TARGET_ID }})
+            --target-id $FAILED_TARGET_ID)
           FAILURE_REASON=$(echo "$DEPLOYMENT_TARGET_DETAILS" | jq -r '.deploymentTarget.instanceTarget.lifecycleEvents[] | select(.status == "Failed") | .diagnostics.message')
           echo "Failure reason: $FAILURE_REASON"
             
