--- a/.github/workflows/stg_ec2_deploy_laravel.yaml
+++ b/.github/workflows/stg_ec2_deploy_laravel.yaml
@@ -59,6 +59,7 @@ jobs:
       - name: Cache vendor
         id: cache
         uses: actions/cache@v3
+        working-directory: ${{ env.SRC_DIR }}
         with:
           ref: main
           path: ./vendor
